public/css/application.css
/*///////////////// 
GOOGLE FONTS
font-family: 'Roboto', sans-serif;
weights 400, 900
font-family: 'Open Sans', sans-serif;
weights 400, 800
/////////////////*/


/*///////////////// 
COLORS 
black: #000000;
navy: #021C48;
blue: #0A2EA2;
white: #F5F5F5;
orange: #FF5200;
orange hover: #E04800;
/////////////////*/


/*///////////////// 
GENERAL STYLES 
/////////////////*/

body {
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	background-color: #EEEEEE;
	font-size: 16px;
}

header {
	text-align: center;
	padding-bottom: 20px;
	background-color: #ffffff;
}

h1, h2, h3, h4, .h1 {
	font-family: 'Roboto', sans-serif;
}

h1 {
	font-weight: 900;
	font-size: 3em;
}

#home-page {
	text-decoration: none;
	color: #021C48;
}	

h2, h3 {
	font-weight: 400;
}

h2 {
	font-size: 1.75em;
}

h3 {
	font-size: 1.25em;
}

p {
	line-height: 1.7;
}

ul {
	list-style: none;
}
ul li {
	line-height: 1.7;
}

/*///////////////// 
HELPERS 
/////////////////*/
.no-margin {
	margin-bottom: 0;
}


/*///////////////// 
NAVIGATION 
/////////////////*/

header h1 {
	margin: 50px 0;
}

#nav__hamburger {
	display: none;
}

.nav__links {
	border-top: 10px solid #FF5200;
	display: flex;
	justify-content: center;
}

.nav__links a {
	text-decoration: none;
	color: #021C48;	
	text-transform: uppercase;
	margin-left: .5em;
	margin-right: .5em;
	padding: 1.96em .7em .5em;
}

.nav__links a:hover {
	background-color: #F5F5F5;
}

.nav__links a.active {
	background-color: #FF5200;
	color: #ffffff;
	font-weight: bold;
}

/*///////////////// 
MAIN SECTIONS
/////////////////*/

.feature {
  display: inline-block;
  margin: 5%;
  text-align: center;
  background-color: #ffffff;
  padding: 4%;
  width: 82%;
}

.feature__heading {
  margin: 30px 0 40px;
}

.feature__copy {
  display: inline-block;
}

a.feature__cta {
	text-decoration: none;
	color: #ffffff;
}

.feature__copy--left {
	width: 45%;
  text-align: left;
  padding-left: 0;
  padding-right: 5%;
}
.feature__copy--right {
	width: 40%;
  text-align: left;
  padding-right: 0;
  padding-left: 5%;
}

.feature__copy--center {
	padding: 0 15%;
}

.feature__copy--center p:last-of-type {
	margin-bottom: 60px;
}

.feature__copy--center h2 {
	margin-left: 0;
}

.feature__aside {
	width: 40%;
	overflow: hidden;
}

.feature__aside--right {
	float: right;
}

.feature__aside--left {
	float: left;
}

.feature__aside img {
	width: 100%;
	height: auto;
}

.feature i { 
	display: inline;
}

.feature__title {
	margin-left: 20px;
	display: inline;
	font-size: 2em;
}

.feature__title-underline {
		border: 2px solid #FF5200;
    margin-left: 35%;
    width: 30%;
    margin-top: 16px;
    margin-bottom: 30px;
}

/*///////////////// 
ICONS 
/////////////////*/

i.fa-truck, i.fa-wrench {
	font-size: 33px;
	color: #ffffff;
	background-color: #FF5200;
	border-radius: 50px;
	padding: 15px;
}


/*///////////////// 
BUTTONS
/////////////////*/

button {
	color: #ffffff;
	background-color: #0A2EA2;
	border: none;
	width: auto;
	font-size: 20px;
	padding: 14px 30px;
	margin-bottom: 10px;
}

button:hover {
	background-color: #062177;
}


/*///////////////// 
TABLET OR SMALLER
/////////////////*/

@media only screen and (max-width: 40em) {
	
	header h1 {
		margin: 10px 10px;
		font-size: 30px;
	}

	#nav__hamburger {
		display: block;
		padding: 3% 0 0 3%;
		text-align: left;
		font-size: 38px;
	}

	#js-toggle {
		display: none;
	}

	.nav__links {
		border: none;
	}

	.nav__links a {
		display: block;
		border-bottom: 1px solid #F5F5F5;
		padding: .5em .7em;
		background-color: #FF5200;
		color: #ffffff;
		margin: 0;
		text-align: left;
		padding-left: 15px;
	}
	
	.nav__links a:hover {
		background-color: #E04800;
	}

	.nav__links a.active {
		font-weight: normal;
	}

	.feature {
	  padding: 7%;
	  text-align: center;
	  width: 75%;
	}

	.feature__title {
		display: inline;
		font-size: 1.75em;
		text-align: center;
	}

	.feature__copy--left,
	.feature__copy--right,
	.feature__copy--center {
		width: 100%;
		padding: 0;
	}

	.feature aside {
		display: none;
	}
}

